<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="quickTestDetails"
            type="com.elfarsisy.lovetypetest.ui.fragments.emotional_quick_text_result_details.QuickTestDetailsViewModel"/>
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_without_shape">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/ic_background_results"
            android:gravity="center"
            android:orientation="vertical"
            tools:context=".ui.fragments.quickstartresults.QuickStartResultFragment">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/margin_mid"
                android:layout_marginTop="@dimen/margin_larg"
                android:layout_marginEnd="@dimen/margin_mid"
                android:layout_marginBottom="@dimen/margin_mid"
                android:background="@color/colorWhite"
                app:cardCornerRadius="24dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/margin_mid"
                        android:text="@string/current_txt"
                        android:textAlignment="center"
                        android:textAllCaps="false"
                        android:textColor="@color/colorBlueLight"
                        android:textSize="@dimen/title_size" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/results_txt"
                        android:textAlignment="center"
                        android:textAllCaps="false"
                        android:textColor="@color/colorBlueLight"
                        android:textSize="@dimen/big_title_size" />

                    <TextView
                        android:id="@+id/personal_type_txt_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/margin_mid"
                        android:layout_marginBottom="@dimen/margin_mid"
                        android:textAlignment="center"
                        android:textAllCaps="false"
                        android:text="@{quickTestDetails.character.toString()}"
                        android:textColor="@color/colorBlueDark"
                        android:textSize="@dimen/big_title_size"
                        tools:text="Director" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <View
                            android:id="@+id/divider1"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/padding_small"
                            android:layout_marginStart="@dimen/margin_mid"
                            android:layout_marginTop="@dimen/margin_small"
                            android:layout_marginEnd="@dimen/margin_mid"
                            android:layout_marginBottom="@dimen/margin_small"
                            android:layout_weight="1"
                            android:background="@color/colorGraylight" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_star_black_24dp" />


                        <View
                            android:id="@+id/divider2"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/padding_small"
                            android:layout_marginStart="@dimen/margin_mid"
                            android:layout_marginTop="@dimen/margin_small"
                            android:layout_marginEnd="@dimen/margin_mid"
                            android:layout_marginBottom="@dimen/margin_small"
                            android:layout_weight="1"
                            android:background="@color/colorGraylight" />
                    </LinearLayout>

                    <View
                        android:id="@+id/divider3"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/padding_small"
                        android:layout_marginStart="@dimen/margin_larg"
                        android:layout_marginTop="@dimen/margin_small"
                        android:layout_marginEnd="@dimen/margin_larg"
                        android:layout_marginBottom="@dimen/margin_small"
                        android:background="@color/colorGraylight" />

                    <ScrollView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/margin_mid"
                        android:layout_marginEnd="@dimen/margin_mid"
                        android:layout_marginBottom="@dimen/margin_mid">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/margin_mid"
                            android:layout_marginBottom="@dimen/margin_mid"
                            android:textAlignment="center"
                            android:textColor="@color/colorBlueDark"
                            android:textSize="@dimen/text_size_mid"
                            android:text="@{quickTestDetails.characterDetails.toString()}"
                            tools:text="Director  Director Director Director Director DirectorDirector Director Director Director Director Director DirectorDirector Director Director Director Director DirectorDirector Director Director Director Director Director DirectorDirector Director Director Director Director DirectorDirector Director Director Director Director Director DirectorDirector Director Director Director Director Director" />
                    </ScrollView>




                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/to_home_agine"
                    style="@style/next_quick_question_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_btn"
                    android:onClick="@{()->quickTestDetails.onNavigatToHome()}"
                    android:textAllCaps="false" />
            </FrameLayout>
        </LinearLayout>
    </ScrollView>
</layout>